2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man, mdoc]: Trivially refactor.

	* tmac/an.tmac (an-start-new-document): Rename this...
	(an*break-page-with-new-number): ...to reflect its reduced
	responsibility.

	* tmac/mdoc/doc-common (doc-start-new-document): Rename this...
	(doc-break-page-with-new-number): ...to reflect its reduced
	responsibility.

2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man, mdoc]: Refactor to separate page number management from
	header trap management.

	* tmac/an.tmac (an-start-new-document): Stop removing
	`an-header` trap.
	(TH): Clear the trap here even if not continuously rendering,
	and call `an-start-new-document`.

	* tmac/mdoc/doc-common (doc-start-new-document): Stop removing
	`doc-header` trap.
	(Dd): Clear the trap here even if not continuously rendering,
	and call `doc-start-new-document`.

2022-12-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/mdoc/doc-common: Refactor for better parallelism with our
	man(7) implementation and to prepare for a synchronized change
	to both.
	(Dd): Move open-coded (inlined) operations from here...
	(doc-start-new-document): ...to this new macro.
	(doc-end-macro): Drop unnecessary register assignment.  `Dd`
	takes care of it if there is a subsequent mdoc(7) document.

2022-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Fix off-by-one error in generated diagnostic message.

	* src/preproc/tbl/table.cpp: Define new preprocessor macro,
	`PREVIOUS_PAGE_REG`.
	(table::init_output): Compute value for register named using
	`PREVIOUS_PAGE_REG`, use it in diagnostic, and then remove it.
	Also fix verb tense in message.

2022-12-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tbl]: Expose the fact of a table's boxedness via a troff
	register so that macro packages can make more intelligent
	decisions about space requirements (since box borders occupy
	significant space on nroff devices).
